...
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:visibility="gone">

        <Button
            android:id="@+id/marketSignUpButton"
            android:layout_width="125dp"
            android:layout_height="50dp"
            android:layout_marginStart="175dp"
            android:layout_marginLeft="175dp"
            android:layout_marginTop="36dp"
            android:background="#005B9F"
...
            android:visibility="visible"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <androidx.appcompat.widget.Toolbar
                android:id="@+id/toolbar"
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:background="#005B9F"
                android:minHeight="?attr/actionBarSize"
                android:theme="?attr/actionBarTheme"
                app:layout_constraintEnd_toEndOf="parent"
...
                app:layout_constraintHorizontal_bias="0.951"
                app:layout_constraintStart_toStartOf="@+id/toolbar"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintVertical_bias="0.523" />

            <EditText
                android:id="@+id/marketLoginEmail"
                style="cent"
                android:layout_width="wrap_content"
                android:layout_height="56dp"
                android:layout_marginTop="60dp"
                android:background="#F3F3F3"
                android:ems="10"
...
                android:textStyle="normal"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/imageView1" />

            <EditText
                android:id="@+id/marketLoginPassword"
                android:layout_width="wrap_content"
                android:layout_height="56dp"
                android:layout_marginTop="44dp"
                android:background="#F3F3F3"
                android:ems="10"
                android:gravity="center"
...
                android:textStyle="normal"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/marketLoginEmail" />

            <Button
                android:id="@+id/marketLoginButton"
                android:layout_width="125dp"
                android:layout_height="50dp"
                android:layout_marginTop="36dp"
                android:background="#005B9F"
                android:text="@string/login"
                android:textAllCaps="false"
...
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:visibility="visible">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/mainChoicewindow"
            android:layout_width="372dp"
            android:layout_height="461dp"
            android:layout_marginTop="24dp"
            android:background="@android:color/white"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.581"
...
                app:layout_constraintHorizontal_bias="0.501"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="@+id/toolbar1"
                app:srcCompat="@drawable/logo_main" />

            <Button
                android:id="@+id/mainCustomertButton"
                android:layout_width="match_parent"
                android:layout_height="65dp"
                android:layout_marginTop="44dp"
                android:background="#005B9F"
                android:text="@string/customer_no_points"
                android:textColor="@android:color/white"
                android:textStyle="normal|bold|italic"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/mainMarketButton" />

            <Button
                android:id="@+id/mainMarketButton"
                android:layout_width="match_parent"
                android:layout_height="65dp"
                android:layout_marginTop="44dp"
...
                app:layout_constraintHorizontal_bias="0.951"
                app:layout_constraintStart_toStartOf="@+id/toolbar77"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintVertical_bias="0.523" />

            <EditText
                android:id="@+id/customerLoginEmail"
                style="cent"
                android:layout_width="wrap_content"
                android:layout_height="56dp"
                android:layout_marginTop="60dp"
                android:background="#F3F3F3"
                android:ems="10"
...
                android:textStyle="normal|italic"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/imageView" />

            <EditText
                android:id="@+id/customerLoginPassword"
                android:layout_width="wrap_content"
                android:layout_height="56dp"
                android:layout_marginTop="44dp"
                android:background="#F3F3F3"
                android:ems="10"
                android:gravity="center"
...
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/customerLoginPassword" />

        </androidx.constraintlayout.widget.ConstraintLayout>

        <Button
            android:id="@+id/customertSignUpButton"
            android:layout_width="125dp"
            android:layout_height="50dp"
            android:layout_marginStart="175dp"
            android:layout_marginLeft="175dp"
            android:layout_marginTop="24dp"
            android:background="#005B9F"
...
            android:textColor="@android:color/white"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/loginwindow3" />

        <Button
            android:id="@+id/customerBackButton"
            android:layout_width="125dp"
            android:layout_height="50dp"
            android:layout_marginTop="24dp"
            android:layout_marginEnd="175dp"
            android:layout_marginRight="175dp"
            android:background="#005B9F"
...
