...

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="50dp">

                <EditText
                    android:id="@+id/selectedCustomerPhone"
                    android:layout_width="360dp"
                    android:layout_height="50dp"
                    android:autofillHints=""
                    android:background="#F3F3F3"
                    android:hint="@string/enter_customer_phone_to_search"
                    android:inputType="number"
...
                    android:textColorHint="@android:color/tertiary_text_light"
                    android:textSize="20sp"
                    android:textStyle="normal|italic"
                    tools:ignore="TextFields" />

                <ImageButton
                    android:id="@+id/customerSelectButton"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:background="#F3F3F3"
                    android:contentDescription="@string/todo"
                    app:srcCompat="@drawable/search_icon" />
            </LinearLayout>
...
                android:paddingLeft="10dp"
                android:text="@string/loan_amount"
                android:textSize="18sp"
                android:textStyle="bold" />

            <EditText
                android:id="@+id/loanAmountInput"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:autofillHints=""
                android:inputType="numberDecimal"
                android:textSize="18sp" />

...
                android:paddingLeft="10dp"
                android:text="@string/description"
                android:textSize="18sp"
                android:textStyle="bold" />

            <EditText
                android:id="@+id/descriptionInput"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:textSize="18dp" />

            <LinearLayout
                android:layout_width="match_parent"
...
                    android:gravity="center"
                    android:text="@string/date_of_loan"
                    android:textSize="18dp"
                    android:textStyle="bold" />

                <EditText
                    android:id="@+id/dateOfLoanInput"
                    android:layout_width="180dp"
                    android:layout_height="50dp"
                    android:textSize="18dp" />

                <ImageButton
                    android:id="@+id/dateOfLoanSelect"
...
                    android:gravity="center"
                    android:text="@string/payment_due_date"
                    android:textSize="18sp"
                    android:textStyle="bold" />

                <EditText
                    android:id="@+id/dueDateInput"
                    android:layout_width="180sp"
                    android:layout_height="50dp"
                    android:textSize="18dp" />

                <ImageButton
                    android:id="@+id/dueDateSelect"
...
                android:layout_height="wrap_content"


                >

                <EditText
                    android:id="@+id/itemNameInput"
                    android:layout_width="180dp"
                    android:layout_height="wrap_content"
                    android:gravity="center"
                    android:hint="@string/product_name" />

                <EditText
                    android:id="@+id/itemPriceInput"
                    android:layout_width="90dp"
                    android:layout_height="wrap_content"
                    android:gravity="center"
                    android:hint="@string/price"
                    android:inputType="number" />

                <Button
                    android:id="@+id/addProductButton"
                    android:layout_width="110dp"
                    android:layout_height="40dp"
                    android:layout_marginStart="10dp"
                    android:layout_marginLeft="10dp"
                    android:background="#005B9F"
                    android:text="@string/add_product"
...
                android:divider="@android:color/black"
                android:dividerHeight="3dp"

                />

            <Button
                android:id="@+id/addDebtButton"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:background="#f24405"
                android:text="@string/add_debt"
                android:textColor="@android:color/white" />

...
