...
                app:layout_constraintHorizontal_bias="0.951"
                app:layout_constraintStart_toStartOf="@+id/toolbar"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintVertical_bias="0.523" />

            <EditText
                android:id="@+id/marketRegisterName"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="30dp"
                android:background="#F3F3F3"
                android:ems="10"
                android:hint="@string/name"
...
                android:textStyle="normal|italic"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/imageView97" />

            <EditText
                android:id="@+id/marketRegisterEmail"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="30dp"
                android:background="#F3F3F3"
                android:ems="10"
                android:hint="@string/email"
...
                android:textStyle="normal|italic"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/marketRegisterName" />

            <EditText
                android:id="@+id/marketRegisterPhone"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="30dp"
                android:background="#F3F3F3"
                android:ems="10"
                android:hint="@string/phone"
...
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.49"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/marketRegisterEmail" />

            <EditText
                android:id="@+id/marketRegisterPassword"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="30dp"
                android:background="#F3F3F3"
                android:ems="10"
                android:hint="@string/password"
...
                android:textStyle="normal|italic"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/marketRegisterPhone" />

            <EditText
                android:id="@+id/marketRegisterIban"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="30dp"
                android:ems="10"
                android:hint="@string/iban_number"
                android:inputType="number"
...
                android:background="#005B9F"
                android:text="@string/back"
                android:textAllCaps="false"
                android:textColor="@android:color/white"
                android:textStyle="normal|bold|italic"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/marketRegisterAdress" />

            <Button
                android:id="@+id/marketRegisterSignUpButtom"
                android:layout_width="125dp"
                android:layout_height="50dp"
                android:layout_marginTop="30dp"
                android:layout_marginEnd="50dp"
                android:layout_marginRight="50dp"
                android:background="#005B9F"
...
