...
                app:layout_constraintHorizontal_bias="0.951"
                app:layout_constraintStart_toStartOf="@+id/toolbar"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintVertical_bias="0.523" />

            <EditText
                android:id="@+id/customerRegisterName"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="30dp"
                android:background="#F3F3F3"
                android:ems="10"
                android:hint="@string/name"
...
                android:textStyle="normal|italic"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/imageView97" />

            <EditText
                android:id="@+id/customerRegisterLastName"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="30dp"
                android:background="#F3F3F3"
                android:ems="10"
                android:hint="@string/last_name"
...
                android:textStyle="normal|italic"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/customerRegisterName" />

            <EditText
                android:id="@+id/customerRegisterPassword"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="30dp"
                android:background="#F3F3F3"
                android:ems="10"
                android:hint="@string/password"
...
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.49"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/customerRegisterLastName" />

            <EditText
                android:id="@+id/customerRegisterPhone"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="30dp"
                android:background="#F3F3F3"
                android:ems="10"
                android:hint="@string/phone"
...
                android:textStyle="normal|italic"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/customerRegisterPassword" />

            <EditText
                android:id="@+id/customerRegisterEmail"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="30dp"
                android:background="#F3F3F3"
                android:ems="10"
                android:hint="@string/email"
...
                android:textColor="@android:color/white"
                android:textStyle="normal|bold|italic"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/customerRegisterEmail" />

            <Button
                android:id="@+id/customerRegisterSignUpButtom"
                android:layout_width="125dp"
                android:layout_height="50dp"
                android:layout_marginTop="40dp"
                android:layout_marginEnd="50dp"
                android:layout_marginRight="50dp"
                android:background="#005B9F"
...
